--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       { word: "halle", meaning: "bad, trash" },
       { word: "schwimm", meaning: "middle, neuter, ok" },
       { word: "frei", meaning: "good, great, top" }
+       { word: "umgebung", meaning: "stupid, unintelligible," }
     ];
 
     const wordList = document.getElementById("word-list");
