--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </style>
 </head>
 <body>
-  <h2>Dictionary</h2>
+  <h2>Hybrid-European Dictionary</h2>
   <input id="search" type="text" placeholder="Search word..." autocomplete="off">
   <ul id="word-list"></ul>
 
