--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
       { word: "schwimm", meaning: "middle, neuter, ok" },
       { word: "frei", meaning: "good, great, top" },
       { word: "umgebung", meaning: "stupid, unintelligible" }
+       { word: "sprytny", meaning: "smart, intelligent, common sense" }
     ];
 
     const wordList = document.getElementById("word-list");
