--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
         <span class="suffix-name">-bad</span>
         <span class="suffix-meaning">means: person; broadly entity or object</span>
       </li>
-      <!-- Add more suffixes here as needed -->
+      <li>
+        <span class="suffix-name">-haus</span>
+        <span class="suffix-meaning">means: subject, class</span>
+      </li>
     </ul>
   </div>
 
@@ -95,7 +98,7 @@
       { word: "schwimm", meaning: "middle, neuter, ok" },
       { word: "frei", meaning: "good, great, top" },
       { word: "umgebung", meaning: "stupid, unintelligible" }
-       { word: "sprytny", meaning: "smart, intelligent, common sense" }
+      { word: "sprytny", meaning: "smart, intelligent, common sense, logical" }
     ];
 
     const wordList = document.getElementById("word-list");
