--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       { word: "halle", meaning: "bad, trash" },
       { word: "schwimm", meaning: "middle, neuter, ok" },
       { word: "frei", meaning: "good, great, top" },
-      { word: "umgebung", meaning: "stupid, unintelligible" }
+      { word: "umgebung", meaning: "stupid, unintelligible" },
       { word: "sprytny", meaning: "smart, intelligent, common sense, logical" }
     ];
 
