--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
       { word: "schwimm", meaning: "middle, neuter, ok" },
       { word: "frei", meaning: "good, great, top" },
       { word: "umgebung", meaning: "stupid, unintelligible" },
-      { word: "sprytny", meaning: "smart, intelligent, common sense, logical" }
+      { word: "sprytny", meaning: "smart, intelligent, common sense, logical" },
+      { word: "droga", meaning: "Hello, Greetings" }
     ];
 
     const wordList = document.getElementById("word-list");
