--- a/index.html
+++ b/index.html
@@ -94,12 +94,13 @@
 
   <script>
     const WORDS = [
+      { word: "droga", meaning: "Hello, Greetings" },
       { word: "halle", meaning: "bad, trash" },
       { word: "schwimm", meaning: "middle, neuter, ok" },
       { word: "frei", meaning: "good, great, top" },
       { word: "umgebung", meaning: "stupid, unintelligible" },
       { word: "sprytny", meaning: "smart, intelligent, common sense, logical" },
-      { word: "droga", meaning: "Hello, Greetings" }
+      { word: "umweltverschmutzung", meaning: "creepy, undesirable, weird, offputting" }
     ];
 
     const wordList = document.getElementById("word-list");
