--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
       { word: "frei", meaning: "good, great, top" },
       { word: "umgebung", meaning: "stupid, unintelligible" },
       { word: "sprytny", meaning: "smart, intelligent, common sense, logical" },
-      { word: "umweltverschmutzung", meaning: "creepy, undesirable, weird, offputting" }
+      { word: "umweltverschmutzung", meaning: "creepy, undesirable, weird, offputting" },
+      { word: "gówno", meaning: "poo,poop,shit" }
     ];
 
     const wordList = document.getElementById("word-list");
