--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
         <span class="suffix-name">-haus</span>
         <span class="suffix-meaning">means: subject, class</span>
       </li>
+      <li>
+        <span class="suffix-name">-samt</span>
+        <span class="suffix-meaning">means: animal, insect, creature</span>
+      </li>
     </ul>
   </div>
 
@@ -101,7 +105,7 @@
       { word: "umgebung", meaning: "stupid, unintelligible" },
       { word: "sprytny", meaning: "smart, intelligent, common sense, logical" },
       { word: "umweltverschmutzung", meaning: "creepy, undesirable, weird, offputting" },
-      { word: "gówno", meaning: "poo,poop,shit" }
+      { word: "gowno", meaning: "poo,poop,shit" }
     ];
 
     const wordList = document.getElementById("word-list");
