--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
       { word: "sprytny", meaning: "smart, intelligent, common sense, logical" },
       { word: "umweltverschmutzung", meaning: "creepy, undesirable, weird, offputting" },
       { word: "gowno", meaning: "poo,poop,shit" }
+      { word: "mangiato", meaning: "teach, learn" }
     ];
 
     const wordList = document.getElementById("word-list");
