--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Hybrid-European Dictionary</title>
+  <link rel="stylesheet" href="css/style.css">
   <style>
     body {
       font-family: sans-serif;
