--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       { word: "umgebung", meaning: "stupid, unintelligible" },
       { word: "sprytny", meaning: "smart, intelligent, common sense, logical" },
       { word: "umweltverschmutzung", meaning: "creepy, undesirable, weird, offputting" },
-      { word: "gowno", meaning: "poo,poop,shit" }
+      { word: "gowno", meaning: "poo,poop,shit" },
       { word: "mangiato", meaning: "teach, learn" }
     ];
 
