--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
   </div>
 
   <script>
-    const WORDS = [
-      { word: "droga", meaning: "Hello, Greetings" },
+    const WORDS = [ 
+      { word: "droga", meaning: "Hello, Greetings" }, // make sure to add commas
       { word: "halle", meaning: "bad, trash" },
       { word: "schwimm", meaning: "middle, neuter, ok" },
       { word: "frei", meaning: "good, great, top" },
